syntax = "proto3";

package AcFunDanmu.Im.Message;

import "B2CMessageReceiptStatus.proto";

message B2CMessageReceiptCountGetRequest {
    repeated int64 seqId = 1;
    string strTargetId = 2;
}

message B2CMessageReceiptCountGetResponse {
    repeated B2CMessageReceiptStatus status = 1;
} 