syntax = "proto3";

option go_package = ".;acproto";

package AcFunDanmu;

import "ZtLiveUserInfo.proto";

message CommonActionSignalLike {
	ZtLiveUserInfo userInfo = 1;
	uint64 sendTimeMs = 2;
}
