syntax = "proto3";

option go_package = ".;acproto";

package AcFunDanmu;

import "ZtLiveUserInfo.proto";

message CommonActionSignalUserEnterRoom {
	ZtLiveUserInfo userInfo = 1;
	uint64 sendTimeMs = 2;
}
