syntax = "proto3";

option go_package = ".;acproto";

package AcFunDanmu;

message CommonStateSignalDisplayInfo {
	string watchingCount = 1;
	string likeCount = 2;
	uint32 likeDelta = 3;
}
