syntax = "proto3";

package AcFunDanmu;

message ZtLiveCsEnterRoom {
	bool isAuthor = 1;
	uint32 reconnectCount = 2;
	uint32 lastErrorCode = 3;
	string enterRoomAttach = 4;
	string clientLiveSdkVersion =5;
}

message ZtLiveCsEnterRoomAck {
	uint64 heartbeatIntervalMs = 1;
}
