syntax = "proto3";

package AcFunDanmu;

message ZtLiveCsHeartbeat {
	uint64 clientTimestampMs = 1;
	uint64 sequence = 2;
}

message ZtLiveCsHeartbeatAck {
	uint64 serverTimestampMs = 1;
	uint64 clientTimestampMs = 2;
	uint64 clientSequence = 3;
}
